# midifoot-old

./: .gitignore  CMakeLists.txt  README.md
components/uartmidi/test/: CMakeLists.txt  test_uartmidi.c
main/: CMakeLists.txt  app_button.c  app_button.h  app_intro.c  app_intro.h  app_main.c  app_main.h  app_storage.c  app_storage.h  idf_component.yml
